examples/test/testpolicy14204.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14204
  namespace: namespace36
spec:
  podSelector:
    matchLabels:
      key25: value12
      key31: value3
      key23: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value46
          key43: value11
      podSelector:
        matchLabels:
          key29: value8
          key34: value33
          key5: value13
